welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:11: error: ';' expected but '[' found.
}[/!]
 ^Program:12: error: ';' expected but '[' found.
}[/!]
 ^